# llama-cpp-rust

./: .gitmodules  Cargo.toml  Makefile  README.md  build.rs  wrapper.h
examples/: server.rs  simple_chat.rs
src/: lib.rs
